Issue #20113: os.readv() and os.writev() now raise an OSError exception on error instead of returning -1.